--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "^3.4.5",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
