--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "native-base": "^3.4.5",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "^4.2.5",
-    "react-native-svg": "^12.3.0"
+    "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
